# trabalho-intercursos

backend/: .flake8  .pre-commit-config.yaml  pyproject.toml
backend/src/app/: __init__.py  config.py  routes.py
backend/src/app/controllers/: auth.py  classificador.py
backend/src/app/prompts/: __init__.py  classificador.py
backend/src/app/schemas/classificador/: __init__.py  analise_perfil.py  form_request.py
backend/src/app/services/: __init__.py  gemini.py
front-end/: package.json  pnpm-lock.yaml  tailwind.config.ts
front-end/src/: index.css
front-end/src/components/: LandingScreen.tsx  LoadingScreen.tsx  ResultDashboard.tsx  WizardFlow.tsx
front-end/src/components/ui/: button.tsx  form.tsx
front-end/src/pages/: Index.tsx
